# actix-web-Scaffold

./: Cargo.toml  README  README.md
src/: app.rs  lib.rs  main.rs  user_handler.rs
src/app/: mod.rs
src/app/guard/: mod.rs
src/app/middleware/: mod.rs
src/app/middleware/request_handler/: mod.rs
src/app/service/: mod.rs
src/app/state/: mod.rs
src/common/: mod.rs
src/common/dto/: mod.rs
src/common/err/: mod.rs
src/common/log/: mod.rs
src/config/: mod.rs
src/config/cache/: mod.rs
src/config/common/: mod.rs
src/config/db/: mod.rs
src/service/: mod.rs
src/service/order/: mod.rs
src/service/product/: mod.rs
src/service/user/: mod.rs
